# Visual_Inertial_Odometry

./: .gitignore  README.md  compare_logs.py  evaluate_trajectory.py  requirements.txt
bag_utils/: euroc_to_bag.py  uzh_to_bag.py
ros2_ws/src/vio_pipeline/: package.xml  setup.cfg  setup.py
ros2_ws/src/vio_pipeline/config/: euroc_params.yaml  gps_profiles.yaml  pipeline_params.yaml  uzh_indoor_params.yaml
ros2_ws/src/vio_pipeline/launch/: features.launch.py  full_pipeline.launch.py
ros2_ws/src/vio_pipeline/vio_pipeline/: __init__.py  debug_logger_node.py  eskf_node.py  factor_graph.py  feature_extraction.py  feature_tracking_KLT.py  feature_tracking_node.py  fgo_backend_node.py  gps_simulator_node.py  ground_truth_publisher.py  imu_preintegrator.py  imu_processing_node.py  so3_utils.py  stereo_rectifier_node.py  tf_publisher_node.py  vio_node.py
vio_ws/src/vio_pkg/: package.xml  setup.cfg  setup.py
vio_ws/src/vio_pkg/launch/: raft_launch.py  vio_launch.py
vio_ws/src/vio_pkg/vio_pkg/: backend.py  frontend.py  frontend_raft.py  ground_truth_pub.py  loop_closure.py  mapper.py  tf_broadcaster.py  trajectory_comparator.py
