<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio_pipeline</name>
  <version>0.1.0</version>
  <description>Visual-Inertial Odometry pipeline using EuRoC MAV dataset (ROS2 Jazzy, Python)</description>
  <maintainer email="user@example.com">VIO Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
